# Inst_video_downloader_tg_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTAGRAPI_MIGRATION.md  MAKEFILE_COMMANDS.md  MULTI_ACCOUNT_GUIDE.md  Makefile  README-Docker.md  README.md  SETUP_GUIDE.md  VALIDATION_FIX_EXPLANATION.md  accounts_example.txt  check_cookies.py  config.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-setup-2fa.sh  env_example_multi_proxy.txt  format_instmanager_accounts.py  import_cookies.py  import_cookies_instmanager.py  instagram_auth.py  main.py  manage_accounts.py  monitor_cookies.py  pyproject.toml  refresh_cookies.py  requirements.txt  test_instagrapi.py  test_proxies.py  test_validation_fix.py  test_webdriver.py  warmup_account.py
.github/workflows/: ci.yml
docs/guides/: ANTI_BAN_GUIDE.md  INSTMANAGER_GUIDE.md  MAKEFILE_COMMANDS.md  MULTI_ACCOUNT_GUIDE.md  README-Docker.md  SETUP_GUIDE.md
sessions/: Janice_assPatrick.json
tests/: test_account_manager.py  test_admin_status_performance_format.py  test_chaos_text.py  test_health_check.py  test_inline_access.py  test_inline_delivery.py  test_instagram_auth_exporter.py  test_instagram_auth_pool.py  test_instagram_client_metadata.py  test_instagram_fast_extractor.py  test_instagram_provider_slot.py  test_job_manager.py  test_main_environment.py  test_makefile_accounts_export_auth.py  test_manage_accounts_cli.py  test_media_metadata.py  test_performance_metrics.py  test_post_deploy_notifications.py  test_request_parser.py  test_rich_text.py  test_state_schema.py  test_state_store_chaos.py  test_state_store_true_inline.py  test_telegram_bot_errors.py  test_telegram_bot_media_send.py  test_telegram_bot_true_inline.py  test_telegram_cache.py  test_telegram_inline_sessions.py  test_telegram_media_retry.py  test_telegram_media_sender.py  test_telegram_performance.py  test_telegram_provider_metrics.py  test_telegram_update_helpers.py  test_transient_retry_classifier.py  test_twitter_downloader.py  test_video_downloader_flow.py  test_youtube_downloader.py
(+58 files in other folders)
