[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "inst-video-downloader-tg-bot"
version = "0.1.0"
description = "Telegram bot for downloading Instagram and Twitter/X media"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot==22.8",
  "instagrapi==2.7.20",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-dotenv==1.2.2",
  "yt-dlp==2026.6.9",
  "pyotp==2.9.0",
  "requests==2.34.2",
  "aiofiles==25.1.0",
  "tabulate==0.10.0",
  "pillow==12.2.0",
]

[dependency-groups]
dev = [
  "black==26.3.1",
  "isort==8.0.1",
  "mypy==1.19.1",
  "pylint==4.0.5",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[tool.uv]
environments = ["sys_platform != 'android'"]
exclude-newer-package = { instagrapi = false, pydantic = false, pydantic-core = false }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["instagram_video_bot*"]

[tool.pytest.ini_options]
pythonpath = ["."]
